# yosupo-library

./: .clang-format  .clangd  .clinerules  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  agents.md  compile_flags.txt  expander.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: lint.yml  oj.yml  unittest.yml  unittest_msvc.yml  verify.yml
.verify-helper/: config.toml
src/yosupo/: algebra.hpp  binaryheap.hpp  bit.hpp  bitvector.hpp  comb.hpp  convolution.hpp  coord.hpp  debug.hpp  dsu.hpp  dump.hpp  fastio.hpp  fastset.hpp  flattenvector.hpp  fps.hpp  fraction.hpp  hash.hpp  hashmap.hpp  hashset.hpp  hl.hpp  hyperloglog.hpp  int_n.hpp  internal_type_traits.hpp  matching.hpp  math.hpp  matrix.hpp  maxflow.hpp  modint.hpp  modint61.hpp  modint8.hpp  modvec.hpp  mst.hpp  networksimplex.hpp  numeric.hpp  random.hpp  sparsetable.hpp  splaytree.hpp  stopwatch.hpp  template.cpp  template.hpp  toptree.hpp  (+4 more)
src/yosupo/container/: array2d.hpp  dynamicsegtree.hpp  fastset.hpp  hashmap.hpp  hashset.hpp  reversiblesplaytree.hpp  segtree.hpp  segtree2d.hpp  sparsetable.hpp  splaytree.hpp  vector2d.hpp
src/yosupo/geo/: convex.hpp  line.hpp  point.hpp  polygon.hpp
src/yosupo/math/: basic.hpp  factor.hpp  logarithm.hpp  prime.hpp  primitive_root.hpp
src/yosupo/simd/: modint.hpp  vector.hpp
test/: CMakeLists.txt  run_oj.sh  run_unittest.sh
test-oj/: aplusb.test.cpp  find_linear_recurrence.test.cpp  matching.test.cpp  simd_exp.test.cpp  simd_inv.test.cpp  simd_log.test.cpp
test/benchmark/: convolution_bench.cpp
test/oj/: aplusb.test.cpp  associative_array.test.cpp  convolution.test.cpp  discrete_logarithm_mod.test.cpp  dynamicsegtree_range_affine_range_sum.test.cpp  dynamicseq.test.cpp  dynamicseq_twine.test.cpp  factorize.test.cpp  hl-lca.test.cpp  hl_lca.test.cpp  kth_root_integer.test.cpp  matching.test.cpp  matrix_product.test.cpp  min_cost_b_flow.test.cpp  mst.test.cpp  point_add_range_sum.test.cpp  point_add_rectangle_sum.test.cpp  point_set_tree_path_composite_sum.test.cpp  point_set_tree_path_composite_sum_fixed_root.test.cpp  pow_of_matrix.test.cpp  product_of_polynomial_sequence.test.cpp  rank_of_matrix.test.cpp  sort_points_by_argument.test.cpp  splaytree_dynamicseq.test.cpp  static_convex_hull.test.cpp  staticrmq.test.cpp
test/unittest/: CMakeLists.txt  algebra_test.cpp  binaryheap_test.cpp  bit_test.cpp  comb_test.cpp  convolution_test.cpp  coord_test.cpp  debug_test.cpp  dsu_test.cpp  dump_test.cpp  fast_set_test.cpp  fastio_test.cpp  fastset_test.cpp  flattenvector_test.cpp  fps_test.cpp  fraction_test.cpp  hash_test.cpp  hashmap_test.cpp  hl_test.cpp  hyperloglog_test.cpp  int_n_test.cpp  math_test.cpp  maxflow_test.cpp  modint61_test.cpp  modint8_test.cpp  modint_test.cpp  modvec_test.cpp  mst_test.cpp  networksimplex_test.cpp  numeric_test.cpp  random_test.cpp  sparsetable_test.cpp  splaytree_test.cpp  toptree_test.cpp  util_test.cpp  vector2d_test.cpp
test/unittest/container/: array2d_test.cpp  binaryheap_test.cpp  dynamicsegtree_test.cpp  fastset_test.cpp  hashmap_test.cpp  hashset_test.cpp  segtree2d_test.cpp  segtree_test.cpp  sparsetable_test.cpp  splaytree_test.cpp  vector2d_test.cpp
test/unittest/geo/: convex_test.cpp  line_test.cpp  point_test.cpp  polygon_test.cpp
test/unittest/math/: basic_test.cpp  prime_test.cpp  primitive_root_test.cpp
test/unittest/simd/: convolution_test.cpp  fps_test.cpp  modint_test.cpp  vector_test.cpp
test/utils/: int128.hpp  math.hpp  random.hpp
yosupo/: binaryheap.hpp  bit.hpp  bitvector.hpp  comb.hpp  costscaling.hpp  fastio.hpp  fastset  fastset.hpp  fps.hpp  hash.hpp  hashmap.hpp  hl.hpp  internal_bit  internal_bit.hpp  matching.hpp  math.hpp  modint.hpp  pushrelabel.hpp  random.hpp  rollinghash.hpp
yosupo/simd/: convolution.hpp  fps.hpp
